--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -46,6 +46,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            console.log($CLINIC_SERVICE_URIS_CLINICS_GET)
+            console.log($CLINIC_SERVICE_URIS_CLINICSPETSCLINICID_GET)
             script = require('./core-services/clinic-service/swagger-integrations.js')
             output = script()
             console.log(output)
