--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -46,14 +46,14 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            script = require('./core-services/clinic-service/swagger-integrations.js')
-            output = script()
-            console.log(output)
-            for (uri of output.uriSecretNames) {
-              console.log(uri)
-              output.swaggerSpec = output.swaggerSpec.replace(uri, eval('$' + uri))
-            }
-            console.log(output.swaggerSpec)
+            # script = require('./core-services/clinic-service/swagger-integrations.js')
+            # output = script()
+            # console.log(output)
+            # for (uri of output.uriSecretNames) {
+            #   console.log(uri)
+            #   output.swaggerSpec = output.swaggerSpec.replace(uri, eval('$' + uri))
+            # }
+            # console.log(output.swaggerSpec)
             fs.writeFile('output_test.txt', 'test', (err) => {if (err) throw err;});
 
       - name: Upload Swagger file to S3
