--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -46,6 +46,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            fs = require('fs')
             fs.writeFile('output_test.txt', 'test', (err) => {if (err) throw err;});
 
       - name: Upload Swagger file to S3
