--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -43,16 +43,12 @@ jobs:
       #   run: aws s3 cp clinic-service-lambda.zip s3://$DEV_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $DEV_CLINICSERVICEDEPLOY_SSE_KEY
       - name: Print URI secrets
         run: aws secretsmanager get-secret-value --secret-id Clinic_Service_URIs
-        with:
-          aws-region: "eu-west-2"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
-          role-session-name: PETS-Clinic-Service-Deploy
       - name: Process Swagger file
         uses: actions/github-script@v7
         with:
           script: |
+            console.log($DEV_CLINICSERVICEDEPLOY_BUCKET_NAME)
+            console.log($CLINIC_SERVICE_URIS_CLINICSPETSCLINICID_GET)
             script = require('./core-services/clinic-service/swagger-integrations.js')
             output = script()
             console.log(output)
