--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -2,6 +2,8 @@ name: Pets Clinic Service Deployment - Test
 
 on:
   workflow_dispatch:
+  push:
+    branches: [feature/TBBETA-474]
 
 jobs:
   deploy:
