--- a/core-services/clinic-service/tsconfig.json
+++ b/core-services/clinic-service/tsconfig.json
@@ -23,7 +23,12 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": ".build",
-    "rootDir": "./"
+    "rootDir": "./",
+    "plugins": [
+      { 
+        "transform": "typescript-transform-paths" 
+      }
+    ]
   },
   "exclude": [
     "jest.config.ts",
