--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -13,15 +13,16 @@
     "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
     "test": "BRANCH=local jest",
     "tools-setup": "sls dynamodb install",
-    "build": "tsc -b tsconfig.json && yarn run build:copy",
-    "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find test -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build"
+    "build": "tspc -b tsconfig.json && yarn run build:copy && yarn run postbuild",
+    "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find test -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build",
+    "postbuild": "cp test/resources/package.json .build/ && cd .build && yarn install && rm yarn.lock",
+    "zip": "zip -r test-service.zip .build"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
     "aws-lambda": "^1.0.7",
     "aws-xray-sdk": "^3.9.0",
-    "express": "^4.19.2",
     "global": "^4.4.0",
     "node-yaml": "^4.0.1",
     "path-parser": "^6.1.0",
@@ -41,6 +42,8 @@
     "serverless-plugin-tracing": "^2.0.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "ts-patch": "^3.2.1",
+    "typescript": "^5.5.4",
+    "typescript-transform-paths": "3.4.7"
   }
 }
