--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -9,9 +9,10 @@
     "yarn": "1.22.*"
   },
   "scripts": {
-    "start": "BRANCH=local serverless offline start --verbose",
+    "start": "serverless offline start --verbose",
     "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
-    "test": "BRANCH=local jest",
+    "test": "jest",
+    "test-m": "BRANCH=local jest",
     "tools-setup": "sls dynamodb install",
     "build": "tspc -b tsconfig.json && yarn run build:copy && yarn run postbuild",
     "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find test -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build",
