--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -26,7 +26,7 @@ jobs:
         working-directory: core-services/clinic-service
         run: yarn run build
       - name: Create lambda zip
-        run: zip -r clinic-service-lambda.zip ./build/*
+        run: zip -r clinic-service-lambda.zip .build/*
         working-directory: core-services/clinic-service
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
