Fix create package.json step in clinic service pipeline

--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -55,7 +55,7 @@ jobs:
             fs.mkdir('./clinic-service-node-modules', (err) => {if (err) throw err;})
             inputPackageDotJson = fs.readFileSync('./core-services/clinic-service/package.json', 'utf-8')
             outputPackageDotJson = '{"dependencies":' + JSON.stringify(JSON.parse(inputPackageDotJson)['dependencies']) + '}'
-            fs.writeFile('./clinic-service-node-modules/package.json', output, (err) => {if (err) throw err;});
+            fs.writeFile('./clinic-service-node-modules/package.json', outputPackageDotJson, (err) => {if (err) throw err;});
       - name: Create node_modules folder including only non-dev dependencies
         working-directory: clinic-service-node-modules
         run: yarn
