--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -47,3 +47,21 @@ jobs:
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
         run: aws s3 cp swagger.js s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Create package.json file including only non-dev dependencies
+        uses: actions/github-script@v7
+        with:
+          script: |
+            fs = require('fs')
+            fs.mkdir('./clinic-service-node-modules', (err) => {if (err) throw err;})
+            inputPackageDotJson = fs.readFileSync('./core-services/clinic-service/package.json', 'utf-8')
+            outputPackageDotJson = '{"dependencies":' + JSON.stringify(JSON.parse(inputPackageDotJson)['dependencies']) + '}'
+            fs.writeFile('./clinic-service-node-modules/package.json', outputPackageDotJson, (err) => {if (err) throw err;});
+      - name: Create node_modules folder including only non-dev dependencies
+        working-directory: clinic-service-node-modules
+        run: yarn
+      - name: Create node_modules zip
+        run: zip -r node_modules.zip node_modules
+        working-directory: clinic-service-node-modules
+      - name: Upload node_modules file to S3
+        working-directory: clinic-service-node-modules
+        run: aws s3 cp node_modules.zip s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
