--- a/.github/workflows/app-deploy-test.yaml
+++ b/.github/workflows/app-deploy-test.yaml
@@ -2,6 +2,8 @@ name: Pets UI Deployment - Test
 
 on:
   workflow_dispatch:
+  push:
+    branches: [features/TBBETA-466]
 
 jobs:
   build-and-deploy:
