--- a/.github/workflows/app-deploy-test.yaml
+++ b/.github/workflows/app-deploy-test.yaml
@@ -3,7 +3,7 @@ name: Pets UI Deployment - Test
 on:
   workflow_dispatch:
   push:
-    branches: [features/TBBETA-466]
+    branches: [feature/TBBETA-466]
 
 jobs:
   build-and-deploy:
