--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -26,10 +26,7 @@
     "aws-xray-sdk": "^3.9.0",
     "global": "^4.4.0",
     "node-yaml": "^4.0.1",
-    "path-parser": "^6.1.0",
-    "serverless-dynamodb": "^0.2.54",
-    "serverless-http": "^3.2.0",
-    "serverless-offline-aws-eventbridge": "^2.1.0"
+    "path-parser": "^6.1.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.145",
@@ -39,7 +36,10 @@
     "jest": "^29.7.0",
     "jest-plugin-context": "^2.9.0",
     "serverless-auto-swagger": "^3.0.0",
+    "serverless-dynamodb": "^0.2.54",
+    "serverless-http": "^3.2.0",
     "serverless-offline": "^14.0.0",
+    "serverless-offline-aws-eventbridge": "^2.1.0",
     "serverless-plugin-tracing": "^2.0.0",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
