--- a/core-services/clinic-service/src/config/config.yml
+++ b/core-services/clinic-service/src/config/config.yml
@@ -11,7 +11,7 @@ dynamodb:
    table: pets-local-global-clinics
  remote:
    params: {}
-   table: pets-dev-clinics-001
+   table: pets-clinics
 
 functions:
   - getPetsClinics:
