--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -42,6 +42,8 @@ jobs:
       # - name: Upload Clinic Service to S3
       #   working-directory: core-services/clinic-service
       #   run: aws s3 cp clinic-service-lambda.zip s3://$DEV_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $DEV_CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Make script file executable
+        run: chmod +x .github/scripts/swagger-integrations.js
       - name: Process Swagger file
         run: .github/scripts/swagger-integrations.js
       - name: Upload Swagger file to S3
