--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -42,9 +42,9 @@ jobs:
       # - name: Upload Clinic Service to S3
       #   working-directory: core-services/clinic-service
       #   run: aws s3 cp clinic-service-lambda.zip s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
-      - name: Make script file executable
-        run: chmod +x .github/scripts/swagger-integrations.js
       - name: Process Swagger file
-        run: .github/scripts/swagger-integrations.js
+        uses: actions/github-script@v7
+        with:
+          script: const script = require('./.github/scripts/swagger-integrations.js') && script()
       - name: Upload Swagger file to S3
         run: aws s3 cp swagger.json s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
