--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -45,6 +45,8 @@ jobs:
       - name: Process Swagger file
         uses: actions/github-script@v7
         with:
-          script: const script = require('./.github/scripts/swagger-integrations.js') && script()
+          script: |
+            const script = require('./.github/scripts/swagger-integrations.js')
+            script()
       - name: Upload Swagger file to S3
         run: aws s3 cp swagger.json s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
