--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -46,7 +46,11 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const script = require('./.github/scripts/swagger-integrations.js')
-            script(context)
+            script = require('./core-services/clinic-service/swagger-integrations.js')
+            output = script()
+            for (uri of output.uriSecretNames) {
+              output.swaggerSpec = output.swaggerSpec.replace(uri, eval('process.env.' + uri))
+            }
+            fs.writeFile('swagger.json', output.swaggerSpec, (err) => {if (err) throw err;});
       - name: Upload Swagger file to S3
         run: aws s3 cp swagger.json s3://$DEV_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $DEV_CLINICSERVICEDEPLOY_SSE_KEY
