--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            script = require('./core-services/clinic-service/swagger-integrations.js')
+            script = require('./.github/scripts/swagger-integrations.js')
             output = script()
             for (uri of output.uriSecretNames) {
               output.swaggerSpec = output.swaggerSpec.replace(uri, eval('process.env.' + uri))
