--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -2,6 +2,8 @@ name: Pets Clinic Service Deployment - Test
 
 on:
   workflow_dispatch:
+  push:
+    branches: [feature/TBBETA-474]
 
 jobs:
   deploy:
@@ -44,11 +46,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            script = require('./.github/scripts/swagger-integrations.js')
-            output = script()
-            for (uri of output.uriSecretNames) {
-              output.swaggerSpec = output.swaggerSpec.replace(uri, eval('process.env.' + uri))
-            }
-            fs.writeFile('swagger.json', output.swaggerSpec, (err) => {if (err) throw err;});
+            const script = require('./.github/scripts/swagger-integrations.js')
+            script(context)
       - name: Upload Swagger file to S3
         run: aws s3 cp swagger.json s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
