--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -51,9 +51,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            script = require('./core-services/clinic-service/zip-node-modules.js')
-            packageDotJson = script()
-            console.log(packageDotJson)
+            script = require('./.github/scripts/zip-node-modules.js')
+            script()
       - name: Run yarn in nodejs folder
         working-directory: nodejs
         run: yarn
