--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -60,3 +60,5 @@ jobs:
         run: zip -r nodejs.zip nodejs
       - name: Upload nodejs zip file to S3
         run: aws s3 cp nodejs.zip s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Update clinic service lambda code
+        run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:clinic-service-lambda --s3-bucket $TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --s3-key clinic-service-lambda.zip
