--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            script = require('./.github/scripts/zip-node-modules.js')
+            const script = require('./.github/scripts/zip-node-modules.js')
             script()
       - name: Run yarn in nodejs folder
         working-directory: nodejs
