Log script in console for testing

--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -52,8 +52,7 @@ jobs:
         with:
           script: |
             const script = require('./.github/scripts/zip-node-modules.js')
-            outputPackageDotJson = script()
-            console.log(outputPackageDotJson)
+            console.log(script)
       - name: Run yarn in nodejs folder
         working-directory: nodejs
         run: yarn
