--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -51,11 +51,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const script = require('.github/scripts/zip-node-modules.js')
+            const script = require('./.github/scripts/zip-node-modules.js')
             const fs = require('fs')
-            console.log(fs.readdirSync('./'))
-            console.log(fs.readdirSync('./.github'))
-            console.log(fs.readdirSync('./.github/scripts'))
+            console.log(fs.readFileSync('./.github/scripts/zip-node-modules.js', 'utf-8'))
       - name: Run yarn in nodejs folder
         working-directory: nodejs
         run: yarn
