--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -2,6 +2,8 @@ name: Pets Clinic Service Deployment - Dev
 
 on:
   workflow_dispatch:
+  push:
+    branches: [feature/TBBETA-466]
 
 jobs:
   deploy:
