--- a/.github/workflows/app-deploy-dev.yaml
+++ b/.github/workflows/app-deploy-dev.yaml
@@ -10,6 +10,7 @@ on:
     branches: [feature/TBBETA-476]
 
 jobs:
-  uses: ./.github/workflows/app-deploy.yaml
-  with:
-    environment: "dev"
+  pets-ui:
+    uses: ./.github/workflows/app-deploy.yaml
+    with:
+      environment: "dev"
