--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   clinic-service:
-    uses: ./.github\workflows\clinic-service-deploy.yaml
+    uses: ./.github/workflows/clinic-service-deploy.yaml
     with:
       environment: "test"
     secrets: inherit
