babel parser fix

--- a/app/pets-ui/package.json
+++ b/app/pets-ui/package.json
@@ -32,5 +32,8 @@
     "jest-fetch-mock": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@babel/parser": "7.21.9"
   }
 }
