--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -49,6 +49,6 @@ jobs:
         with:
           script: |
             const script = require('./.github/scripts/swagger-integrations.js')
-            script(context)
+            script()
       - name: Upload Swagger file to S3
         run: aws s3 cp swagger.json s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
