--- a/app/pets-ui/.babelrc
+++ b/app/pets-ui/.babelrc
@@ -1,12 +1,21 @@
 {
     "presets": [
         [
-            "next/babel",
+            "@babel/preset-env",
             {
-                "@babel/preset-env": {},
-                "@babel/preset-react": {"runtime": "automatic"},
-                "@babel/preset-typescript": {}
+                "targets": {
+                    "node": "current"
+                }
             }
-        ]      
+        ],
+        [
+            "@babel/preset-react", {
+                "runtime": "automatic"
+            }
+        ],
+        "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "dynamic-import-node"
     ]
 }
