--- a/app/pets-ui/package.json
+++ b/app/pets-ui/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
@@ -32,8 +33,5 @@
     "jest-fetch-mock": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@babel/parser": "7.21.9"
   }
 }
