--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -43,7 +43,7 @@
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "ts-patch": "^3.2.1",
-    "typescript": "^5.5.4",
+    "typescript": "5.5.4",
     "typescript-transform-paths": "3.4.7"
   }
 }
