--- a/.github/workflows/app-pr-checks.yaml
+++ b/.github/workflows/app-pr-checks.yaml
@@ -1,7 +1,7 @@
-name: Pets UI CI
+name: Pets UI PR Checks
 
 on:
-  push:
+  pull_request:
     paths: "app/**"
   workflow_dispatch:
 
@@ -20,12 +20,9 @@ jobs:
           cache: "yarn"
       - name: Install dependencies
         run: yarn
-      - name: Audit packages
-        run: yarn audit
       - name: Run unit tests
         run: yarn run test
         working-directory: app/pets-ui
       - name: Run eslint
         run: yarn run lint
         working-directory: app/pets-ui
-        continue-on-error: true
