--- a/.github/workflows/clinic-service-ci.yaml
+++ b/.github/workflows/clinic-service-ci.yaml
@@ -1,8 +1,7 @@
-name: Pets UI CI
-
+name: Pets Clinic Service CI
 on:
   push:
-    paths: "app/**"
+    paths: "core-services/clinic-service/**"
   workflow_dispatch:
 
 jobs:
@@ -24,8 +23,8 @@ jobs:
         run: yarn audit
       - name: Run unit tests
         run: yarn run test
-        working-directory: app/pets-ui
-      - name: Run eslint
-        run: yarn run lint
-        working-directory: app/pets-ui
-        continue-on-error: true
+        working-directory: core-services/clinic-service
+      # - name: Run eslint
+      #   run: yarn run lint
+      #   working-directory: core-services/clinic-service
+      #   continue-on-error: true
