--- a/app/pets-ui/.babelrc
+++ b/app/pets-ui/.babelrc
@@ -1,7 +1,21 @@
 {
     "presets": [
-        "@babel/preset-env",
-       ["@babel/preset-react", {"runtime": "automatic"}],
-       "@babel/preset-typescript"
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": "current"
+                }
+            }
+        ],
+        [
+            "@babel/preset-react", {
+                "runtime": "automatic"
+            }
+        ],
+        "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "dynamic-import-node"
     ]
 }
