--- a/core-services/clinic-service/src/config/config.yml
+++ b/core-services/clinic-service/src/config/config.yml
@@ -1,14 +1,30 @@
-#dynamodb:
-#  local:
-#    params:
-#      region: localhost
-#      endpoint: http://127.0.0.1:8000
-#    table: pets-local-clinics
-#  local-global:
-#    params:
-#      region: localhost
-#      endpoint: http://127.0.0.1:8000
-#    table: pets-local-global-clinics
-#  remote:
-#    params: {}
-#    table: pets-${BRANCH}-clinics
+dynamodb:
+ local:
+   params:
+     region: localhost
+     endpoint: http://127.0.0.1:8007
+   table: pets-local-clinics
+ local-global:
+   params:
+     region: localhost
+     endpoint: http://127.0.0.1:8007
+   table: pets-local-global-clinics
+ remote:
+   params: {}
+   table: pets-clinics
+
+functions:
+  - getPetsClinics:
+      method: GET
+      path: /clinics
+      proxy: null
+      function: getPetsClinics
+  - getPetsClinic:
+      method: GET
+      path: /clinics/{+proxy}
+      proxy: :petsClinicId
+      function: getPetsClinic
+
+serverless:
+  basePath: /${BRANCH}
+  port: 3004
