--- a/.github/workflows/env/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/env/clinic-service-deploy-dev.yaml
@@ -6,6 +6,8 @@ on:
     types: [closed]
     branches: [main]
     paths: "core-services/clinic-service/**"
+  push:
+    branches: [feature/TBBETA-435]
 
 jobs:
   clinic-service:
