--- a/core-services/lambda-authoriser/package.json
+++ b/core-services/lambda-authoriser/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.658.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
