--- a/core-services/lambda-authoriser/package.json
+++ b/core-services/lambda-authoriser/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.658.1",
+    "axios": "^1.7.7",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "serverless-offline": "^14.3.2"
+    "@types/aws-lambda": "^8.10.145",
+    "@types/jest": "^29.5.13",
+    "@types/jest-plugin-context": "^2.9.7",
+    "jest": "^29.7.0",
+    "jest-plugin-context": "^2.9.0",
+    "serverless-offline": "^14.3.2",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.2"
   }
 }
