--- a/.github/workflows/app-deploy-dev.yaml
+++ b/.github/workflows/app-deploy-dev.yaml
@@ -6,6 +6,8 @@ on:
     types: [closed]
     branches: [main]
     paths: "app/**"
+  push:
+    branches: [feature/TBBETA-435]
 
 jobs:
   pets-ui:
