--- a/app/pets-ui/package.json
+++ b/app/pets-ui/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "cypress": "^13.15.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
