--- a/core-services/lambda-authoriser/package.json
+++ b/core-services/lambda-authoriser/package.json
@@ -18,8 +18,10 @@
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.13",
     "@types/jest-plugin-context": "^2.9.7",
+    "@types/jsonwebtoken": "^9.0.7",
     "jest": "^29.7.0",
     "jest-plugin-context": "^2.9.0",
+    "nock": "^13.5.5",
     "serverless-offline": "^14.3.2",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
