--- a/.github/workflows/core-services-pr-checks.yaml
+++ b/.github/workflows/core-services-pr-checks.yaml
@@ -1,6 +1,7 @@
-name: Pets Clinic Service CI
+name: Pets Core Services PR Checks
+
 on:
-  push:
+  pull_request:
     paths: "core-services/clinic-service/**"
   workflow_dispatch:
 
@@ -27,4 +28,3 @@ jobs:
       # - name: Run eslint
       #   run: yarn run lint
       #   working-directory: core-services/clinic-service
-      #   continue-on-error: true
