--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.tests=core-services/lambda-authoriser/test,core-services/clinic-service/test
-sonar.cpd.exclusions=core-services/lambda-authoriser/test,core-services/clinic-service/test
-sonar.exclusions=core-services/lambda-authoriser/test,core-services/clinic-service/test
+# sonar.tests=core-services/lambda-authoriser/test,core-services/clinic-service/test
+# sonar.cpd.exclusions=core-services/lambda-authoriser/test,core-services/clinic-service/test
+# sonar.exclusions=core-services/lambda-authoriser/test,core-services/clinic-service/test
