--- a/app/pets-ui/cypress/tsconfig.json
+++ b/app/pets-ui/cypress/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
+      "forceConsistentCasingInFileNames": true,
       "target": "es5",
       "lib": ["es5", "dom"],
-      "types": ["cypress", "node"]
+      "types": ["cypress", "node"],
+      "strict": true
     },
     "include": ["**/*.ts"],
     "exclude": ["cypress.config.ts", "cypress", "node_modules"]
