--- a/core-services/clinic-service/sonar-project.properties
+++ b/core-services/clinic-service/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=org.sonarqube:ukhsa-internal_pre-entry-tb-screening-app
 sonar.organization=ukhsa-internal
-sonar.host.url=http://localhost:9000
+sonar.host.url=https://sonarcloud.io
