Fix if condition in core services deployment workflow

--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -40,11 +40,11 @@ jobs:
               - "core-services/clinic-service/**"
 
       - name: Install dependencies
-        if: ${{ matrix.service.name }} != lambda-authoriser
+        if: ${{ matrix.service.name != lambda-authoriser }}
         run: yarn workspace ${{ matrix.service.name }} install
         working-directory: core-services/${{ matrix.service.name }}
       - name: Build service
-        if: ${{ matrix.service.name }} != lambda-authoriser
+        if: ${{ matrix.service.name != lambda-authoriser }}
         working-directory: core-services/${{ matrix.service.name }}
         run: yarn run build
 
